--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,9 +25,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "slugify": "^1.4.6",
+    "twilio": "^3.62.0",
     "typewriter-effect": "^2.17.0"
   },
-  "devDependencies": {
-    "twilio": "^3.61.0"
-  }
+  "devDependencies": {}
 }
